--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "tailwindcss-animated": "^1.0.1",
     "url": "^0.11.1",
